Implementado a segurança, melhorado a interação, implementado testes, e a documentação OpenAPI
